<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Mk-chkButton</string>
    <string name="menu_settings">Settings</string>
    <string name="display_text">Check-box demo</string>
    <string name="chkios">Apple IOS</string>
    <string name="chk_android">Google Android</string>
    <string name="chk_windows">MS Windows</string>
    <string name="chk_linux">GNU/Linux</string>

</resources>
